--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.password=1234
 
 mybatis.type-aliases-package=com.project.domain
 mybatis.configuration.map-underscore-to-camel-case=true
+
+spring.profiles.include=oauth
