--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,31 @@ mybatis.type-aliases-package=com.project.domain
 mybatis.configuration.map-underscore-to-camel-case=true
 
 spring.profiles.include=oauth
+
+#Kakao
+spring.security.oauth2.client.registration.kakao.client-id = 33d895855a397ac7719ad2e86ccdd5ab
+spring.security.oauth2.client.registration.kakao.client-secret = XAejPmi5wravjDJgqQtLy5UsCC9j7k8N
+spring.security.oauth2.client.registration.kakao.scope = profile_nickname, account_email
+spring.security.oauth2.client.registration.kakao.client-name = Kakao
+spring.security.oauth2.client.registration.kakao.authorization-grant-type = authorization_code
+spring.security.oauth2.client.registration.kakao.redirect-uri = http://localhost:8080/login/oauth2/code/kakao
+spring.security.oauth2.client.registration.kakao.client-authentication-method = POST
+
+spring.security.oauth2.client.provider.kakao.authorization-uri = https://kauth.kakao.com/oauth/authorize
+spring.security.oauth2.client.provider.kakao.token-uri = https://kauth.kakao.com/oauth/token
+spring.security.oauth2.client.provider.kakao.user-info-uri = https://kapi.kakao.com/v2/user/me
+spring.security.oauth2.client.provider.kakao.user-name-attribute = id
+
+#naver
+spring.security.oauth2.client.registration.naver.client-id=IIAm76rjtBFWWUVWO7NY
+spring.security.oauth2.client.registration.naver.client-secret=phG9UUVWnn
+spring.security.oauth2.client.registration.naver.redirect-uri={baseUrl}/{action}/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.naver.scope=name,email,profile_image
+spring.security.oauth2.client.registration.naver.client-name=Naver
+
+# provider
+spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver.com/oauth2.0/authorize
+spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
+spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
+spring.security.oauth2.client.provider.naver.user-name-attribute=response
