--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,9 @@ mybatis.configuration.map-underscore-to-camel-case=true
 
 spring.profiles.include=oauth
 
+#errors messages
+spring.messages.basename=errors
+
 #Kakao
 spring.security.oauth2.client.registration.kakao.client-id = 33d895855a397ac7719ad2e86ccdd5ab
 spring.security.oauth2.client.registration.kakao.client-secret = XAejPmi5wravjDJgqQtLy5UsCC9j7k8N
@@ -35,3 +38,6 @@ spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver
 spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
 spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
 spring.security.oauth2.client.provider.naver.user-name-attribute=response
+
+# file path
+file.dir=/D:/bootImage/
