--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,4 +40,4 @@ spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver
 spring.security.oauth2.client.provider.naver.user-name-attribute=response
 
 # file path
-file.dir=/D:/bootImage/
+file.dir=/D:/spaceImage/
